# vaulty

./: COMPILING.md  README.md  compile.ps1  compile.sh
secrets/: gen-access-keys.sh  gen-secrets-key.ps1  gen-secrets-key.sh  gen-server-cert.sh
secrets/sources/: secret-encrypt.py
secrets/sources/argon2-password/: Cargo.toml
source/cli/: Cargo.toml
source/cli/src/: cmdline.rs  main.rs  parser.rs  permission.rs  session.rs  term.rs
source/cli/src/cmd/: mod.rs
source/cli/src/cmd/access/: change_permission.rs  change_sg.rs  delete.rs  find.rs  insert.rs  list.rs
source/cli/src/cmd/secret/: delete.rs  find.rs  insert.rs  list.rs  mod.rs
source/cli/src/cmd/user/: change_password.rs  change_sg.rs  delete.rs  demote.rs  find.rs  insert.rs  list.rs  promote.rs
source/cli/src/cmd/vault/: delete.rs  find.rs  list.rs
source/vault/: .gitignore  Cargo.toml
source/vault/src/: access_keys.rs  api.rs  app_error.rs  config.rs  exit.rs  log.rs  main.rs  permission.rs  secrets.rs  server.rs  user.rs
source/vault/src/cmd/: mod.rs
source/vault/src/cmd/access/: change_permission.rs  change_sg.rs  delete.rs  find.rs  insert.rs  list.rs  mod.rs
source/vault/src/cmd/secret/: delete.rs  find.rs  insert.rs  list.rs
source/vault/src/cmd/user/: change_password.rs  change_sg.rs  delete.rs  demote.rs  find.rs  insert.rs  list.rs  mod.rs  promote.rs
source/vault/src/cmd/vault/: delete.rs  find.rs  list.rs  mod.rs
source/vault/src/db/: access.rs  mod.rs  secret.rs  user.rs  vault.rs
source/vault/src/vault/: delete.rs  get.rs  insert.rs  list.rs  mod.rs
(+4 files in other folders)
