[package]
name = "vaulty-cli"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_os = "windows"))'.dependencies]
termios = "0.3.3"

[dependencies]
anyhow = "1.0.90"
base64-simd = "0.8.0"
chrono = "0.4.38"
crossterm = "0.28.1"
dialoguer = "0.11.0"
futures = "0.3.31"
indicatif = "0.17.8"
native-tls = "0.2.12"
once_cell = "1.20.2"
rpassword = "7.3.1"
rustyline = { version = "14.0.0", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "tokio-native-tls"] }
tungstenite = "0.24.0"
url = "2.5.2"
