[package]
name = "vaulty"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-ws = "0.3.0"
aes-gcm = "0.10.3"
anyhow = "1.0.89"
argon2 = { version = "0.5.3", features = ["rand", "std"] }
base64-simd = "0.8.0"
chrono = "0.4.38"
futures = "0.3.31"
ipnetwork = "0.20.0"
json = "0.12.4"
maplit = "1.0.2"
once_cell = "1.20.2"
openssl = "0.10.66"
p256 = "0.13.2"
rand = "0.8.5"
redb = "2.1.4"
rsa = "0.9.6"
rustls = "0.20.9"
rustls-pemfile = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
simd-json = "0.14.1"
tokio = { version = "1.40.0", features = ["full"] }
